--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ h2 {
   z-index: 800;
 }
 
-#change-color-btn {
+.app-btn {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -67,9 +67,9 @@ h2 {
   font-weight: bold;
   color:#aaa;
   font-family: 'Helvetica';
-  margin-top:20px;
-  margin-left:20px;
-  margin-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  margin-left: 20px;
   border:2px solid #aaa;
   padding:5px 10px;
   cursor: pointer;
@@ -81,7 +81,7 @@ h2 {
   transition: color 0.3s ease-out, border 0.3s ease-out;
 }
 
-#change-color-btn:hover {
+.app-btn:hover {
   color:#fff;
   border:2px solid #fff;
 }
