--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@ body, html {
 
 a {
   color:#CD78D8;
+  border: 0;
+}
+
+a img {
+  border:0;
 }
 
 html {
@@ -106,7 +111,7 @@ h3 {
   margin-bottom: 20px;
   margin-left: 20px;
   border:2px solid #aaa;
-  padding:5px 10px;
+  padding:5px 10px 3px 10px;
   cursor: pointer;
   border-radius: 6px;
 
@@ -119,6 +124,24 @@ h3 {
 .app-btn:hover {
   color:#fff;
   border:2px solid #fff;
+}
+
+.download-btn-wrapper {
+  float:left;
+  width:100%;
+  margin:0px 0px 40px 20px;
+}
+
+.description .download-btn-wrapper {
+  margin-left: 0px;
+}
+
+#download-on-github-btn {
+  margin: 0px;
+}
+
+a.app-btn {
+  text-decoration: none;
 }
 
 a.back-btn {
@@ -136,7 +159,7 @@ a.back-btn {
   margin-left:20px;
   margin-bottom: 0px;
   border:2px solid #aaa;
-  padding:5px 10px 4px 10px;
+  padding:5px 10px 3px 10px;
   cursor: pointer;
   border-radius: 6px;
   text-decoration: none;
